# launcher3

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/shared/: archive.rs  download.rs  hash.rs  mod.rs
src/v1/: constant.rs  mod.rs
src/v1/discovery/: core.rs  device.rs  mod.rs  profile.rs
src/v1/loader/: mod.rs  package.rs  script.rs
src/v1/protocol/: raw.rs
src/v1/resolver/: file.rs  mod.rs  package.rs  underline.rs
